style: Alterar fundo da página Em Breve para verde claro pastel
- Mudança do gradiente de azul/roxo para verde claro pastel (#a8e6cf - #c8f7c5)
- Melhora na identidade visual da página coming-soon
- Preparação para deploy em produção

--- a/public/coming-soon.html
+++ b/public/coming-soon.html
@@ -24,7 +24,7 @@
 
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #a8e6cf 0%, #c8f7c5 100%);
             min-height: 100vh;
             display: flex;
             align-items: center;
@@ -224,10 +224,6 @@
                 <div class="feature-text">Banho & Tosa</div>
             </div>
             <div class="feature">
-                <div class="feature-icon">🏥</div>
-                <div class="feature-text">Cuidados Veterinários</div>
-            </div>
-            <div class="feature">
                 <div class="feature-icon">🛍️</div>
                 <div class="feature-text">Pet Shop</div>
             </div>
@@ -240,7 +236,7 @@
         <div class="contact-info">
             <div class="contact-title">📞 Fale Conosco</div>
             <div class="contact-item">📧 contato@petshopromeoejulieta.com</div>
-            <div class="contact-item">📱 (11) 99999-9999</div>
+            <div class="contact-item">📱 (11) 99380-5117</div>
             <div class="contact-item">📍 São Paulo, SP</div>
         </div>
 
