--- a/public/coming-soon.html
+++ b/public/coming-soon.html
@@ -44,7 +44,6 @@
         .logo {
             font-size: 4rem;
             margin-bottom: 20px;
-            animation: bounce 2s infinite;
         }
 
         .title {
@@ -52,7 +51,6 @@
             font-weight: 700;
             margin-bottom: 20px;
             text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
-            animation: fadeInUp 1s ease-out;
         }
 
         .subtitle {
@@ -60,7 +58,6 @@
             margin-bottom: 30px;
             opacity: 0.9;
             line-height: 1.6;
-            animation: fadeInUp 1s ease-out 0.3s both;
         }
 
         .description {
@@ -68,7 +65,6 @@
             margin-bottom: 40px;
             opacity: 0.8;
             line-height: 1.5;
-            animation: fadeInUp 1s ease-out 0.6s both;
         }
 
         .features {
@@ -76,7 +72,6 @@
             grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
             gap: 20px;
             margin: 40px 0;
-            animation: fadeInUp 1s ease-out 0.9s both;
         }
 
         .feature {
@@ -103,37 +98,19 @@
         }
 
         .contact-info {
-            margin-top: 40px;
-            padding: 20px;
-            background: rgba(255, 255, 255, 0.1);
-            border-radius: 15px;
-            backdrop-filter: blur(10px);
-            border: 1px solid rgba(255, 255, 255, 0.2);
-            animation: fadeInUp 1s ease-out 1.2s both;
-        }
-
-        .contact-title {
-            font-size: 1.2rem;
-            margin-bottom: 15px;
-            font-weight: 600;
-        }
-
-        .contact-item {
-            margin: 10px 0;
-            font-size: 1rem;
-            opacity: 0.9;
+            margin: 30px 0;
         }
 
         .social-links {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
             margin-top: 30px;
-            animation: fadeInUp 1s ease-out 1.5s both;
         }
 
         .social-link {
-            display: inline-block;
-            margin: 0 15px;
-            font-size: 2rem;
             color: white;
+            font-size: 2rem;
             text-decoration: none;
             transition: transform 0.3s ease;
         }
@@ -199,15 +176,62 @@
             .subtitle { font-size: 1rem; }
             .logo { font-size: 2.5rem; }
         }
+
+        /* Header Styles */
+        .header {
+            background: rgba(255, 255, 255, 0.1);
+            backdrop-filter: blur(10px);
+            border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+            position: sticky;
+            top: 0;
+            z-index: 50;
+        }
+
+        .header-container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0 20px;
+            display: flex;
+            justify-content: flex-start;
+            align-items: center;
+            height: 64px;
+        }
+
+        .header-logo {
+            display: flex;
+            align-items: center;
+            gap: 8px;
+        }
+
+        .logo-icon {
+            font-size: 2rem;
+            color: white;
+        }
+
+        .logo-text {
+            font-size: 1.25rem;
+            font-weight: 700;
+            color: white;
+            text-shadow: 1px 1px 2px rgba(0,0,0,0.3);
+        }
+
+        @media (max-width: 640px) {
+            .logo-text {
+                display: none;
+            }
+        }
     </style>
 </head>
 <body>
-    <div class="floating-elements">
-        <div class="floating-paw">🐾</div>
-        <div class="floating-paw">🐾</div>
-        <div class="floating-paw">🐾</div>
-        <div class="floating-paw">🐾</div>
-    </div>
+    <!-- Header -->
+    <header class="header">
+        <div class="header-container">
+            <div class="header-logo">
+                <span class="logo-icon">🐾</span>
+                <span class="logo-text">PetShop Romeo & Julieta</span>
+            </div>
+        </div>
+    </header>
 
     <div class="container">
         <div class="logo">🐕❤️🐱</div>
