Corrige bichinhos restantes e melhora legibilidade do texto

--- a/public/coming-soon.html
+++ b/public/coming-soon.html
@@ -50,21 +50,26 @@
             font-size: 3.5rem;
             font-weight: 700;
             margin-bottom: 20px;
-            text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
+            color: rgba(255, 255, 255, 1);
         }
 
         .subtitle {
             font-size: 1.4rem;
             margin-bottom: 30px;
-            opacity: 0.9;
+            opacity: 1;
             line-height: 1.6;
+            color: rgba(255, 255, 255, 0.95);
+            text-shadow: 1px 1px 2px rgba(0,0,0,0.4);
         }
 
         .description {
             font-size: 1.1rem;
             margin-bottom: 40px;
-            opacity: 0.8;
+            opacity: 1;
             line-height: 1.5;
+            color: rgba(255, 255, 255, 0.9);
+            text-shadow: 1px 1px 2px rgba(0,0,0,0.3);
         }
 
         .features {
@@ -94,11 +99,15 @@
 
         .feature-text {
             font-size: 0.9rem;
-            opacity: 0.9;
+            opacity: 1;
+            color: rgba(255, 255, 255, 0.95);
+            text-shadow: 1px 1px 2px rgba(0,0,0,0.4);
         }
 
         .contact-info {
             margin: 30px 0;
+            color: rgba(255, 255, 255, 0.95);
+            text-shadow: 1px 1px 2px rgba(0,0,0,0.4);
         }
 
         .social-links {
@@ -234,7 +243,7 @@
     </header>
 
     <div class="container">
-        <div class="logo">🐕❤️🐱</div>
+        <div class="logo">🎯</div>
         <h1 class="title">Em Breve</h1>
         <p class="subtitle">PetShop Romeo & Julieta</p>
         <p class="description">
@@ -308,7 +317,7 @@
 
         // Console easter egg
         console.log(`
-🐾 PetShop Romeo & Julieta 🐾
+🎯 PetShop Romeo & Julieta 🎯
 ═══════════════════════════════
 Olá, desenvolvedor curioso! 👋
 Estamos preparando algo incrível!
