--- a/public/coming-soon.html
+++ b/public/coming-soon.html
@@ -50,8 +50,8 @@
             font-size: 3.5rem;
             font-weight: 700;
             margin-bottom: 20px;
-            text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
-            color: rgba(255, 255, 255, 1);
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
+            color: #2d3748;
         }
 
         .subtitle {
@@ -59,8 +59,8 @@
             margin-bottom: 30px;
             opacity: 1;
             line-height: 1.6;
-            color: rgba(255, 255, 255, 0.95);
-            text-shadow: 1px 1px 2px rgba(0,0,0,0.4);
+            color: #4a5568;
+            text-shadow: 1px 1px 2px rgba(0,0,0,0.2);
         }
 
         .description {
@@ -68,8 +68,8 @@
             margin-bottom: 40px;
             opacity: 1;
             line-height: 1.5;
-            color: rgba(255, 255, 255, 0.9);
-            text-shadow: 1px 1px 2px rgba(0,0,0,0.3);
+            color: #4a5568;
+            text-shadow: 1px 1px 2px rgba(0,0,0,0.2);
         }
 
         .features {
@@ -100,14 +100,14 @@
         .feature-text {
             font-size: 0.9rem;
             opacity: 1;
-            color: rgba(255, 255, 255, 0.95);
-            text-shadow: 1px 1px 2px rgba(0,0,0,0.4);
+            color: #4a5568;
+            text-shadow: 1px 1px 2px rgba(0,0,0,0.2);
         }
 
         .contact-info {
             margin: 30px 0;
-            color: rgba(255, 255, 255, 0.95);
-            text-shadow: 1px 1px 2px rgba(0,0,0,0.4);
+            color: #4a5568;
+            text-shadow: 1px 1px 2px rgba(0,0,0,0.2);
         }
 
         .social-links {
@@ -185,63 +185,9 @@
             .subtitle { font-size: 1rem; }
             .logo { font-size: 2.5rem; }
         }
-
-        /* Header Styles */
-        .header {
-            background: rgba(255, 255, 255, 0.1);
-            backdrop-filter: blur(10px);
-            border-bottom: 1px solid rgba(255, 255, 255, 0.2);
-            position: sticky;
-            top: 0;
-            z-index: 50;
-        }
-
-        .header-container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 0 20px;
-            display: flex;
-            justify-content: flex-start;
-            align-items: center;
-            height: 64px;
-        }
-
-        .header-logo {
-            display: flex;
-            align-items: center;
-            gap: 8px;
-        }
-
-        .logo-icon {
-            font-size: 2rem;
-            color: white;
-        }
-
-        .logo-text {
-            font-size: 1.25rem;
-            font-weight: 700;
-            color: white;
-            text-shadow: 1px 1px 2px rgba(0,0,0,0.3);
-        }
-
-        @media (max-width: 640px) {
-            .logo-text {
-                display: none;
-            }
-        }
     </style>
 </head>
 <body>
-    <!-- Header -->
-    <header class="header">
-        <div class="header-container">
-            <div class="header-logo">
-                <span class="logo-icon">🐾</span>
-                <span class="logo-text">PetShop Romeo & Julieta</span>
-            </div>
-        </div>
-    </header>
-
     <div class="container">
         <div class="logo">🎯</div>
         <h1 class="title">Em Breve</h1>
